Prevent 'Tor check' to overlaps with message

--- a/wiki/src/home.css
+++ b/wiki/src/home.css
@@ -8,22 +8,26 @@
 #tor_check {
   display: block;
   height: 80px;
+  width: 270px;
   margin-bottom: 1em;
 }
 
 #tor_check a {
-  background: #53b351 url(lib/onion.png) no-repeat 16px 8px !important;
+  background: #53b351 !important;
   border-radius: 0.5em;
-  padding: 0.5em 2em 0.5em 0.5em;
+  padding: 15px;
   color: black !important;
   font-size: 2em;
   position: absolute;
   right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  line-height: 1em;
 }
 
-#tor_check a span {
-  display: block;
-  padding: 15px 60px;
+#tor_check a img {
+  margin-right: 15px;
 }
 
 /* Random message box */
